fix: fix PP radiobutton on mobile

--- a/source/sass/blocks/sign-up-form.scss
+++ b/source/sass/blocks/sign-up-form.scss
@@ -305,7 +305,11 @@
 
   .sign-up-form__field--birth {
     .sign-up-form__field:last-child {
-      margin-left: 2px;
+      margin: 0 0 0 2px;
+
+      @include vp-767 {
+        margin: 0;
+      }
     }
 
     .sign-up-form__field:not(:last-child) {
